--- a/demo.html
+++ b/demo.html
@@ -12,10 +12,10 @@
 <body>
     <div class="head">
         <div class="head_content">
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-            <div class="item">4</div>
+            <div class="item">所有奖品</div>
+            <div class="item">代金券奖品</div>
+            <div class="item">商品奖品</div>
+            <div class="item">实物奖品</div>
         </div>
         <div class="botomLine"></div>
     </div>
@@ -30,11 +30,7 @@
                 </div>
                 <ul class="ulList">
                     <li>页面一页面一页面一页面一页面一页面一页面一页面一页面一页面一页面一
-                    </li>
-                    <li>Mobile Safari/537.36"
-                        [Sat Jun 10 2017 00:38:02 GMT+0800 (中国标准时间)] "GET /js/index.js" "Mozilla/5.0 (Linux;
-                        Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.
-                        87 Mobile Safari/537.36"
+                        <i class="weui-icon-success weui-icon_msg"></i>
                     </li>
                     <li>Mobile Safari/537.36"
                         [Sat Jun 10 2017 00:38:02 GMT+0800 (中国标准时间)] "GET /js/index.js" "Mozilla/5.0 (Linux;
@@ -80,9 +76,6 @@
                     <div class="weui-loadmore weui-loadmore_line">
                         <span class="weui-loadmore__tips">暂无数据</span>
                     </div>
-                    <!--<div class="weui-loadmore weui-loadmore_line weui-loadmore_dot">
-                        <span class="weui-loadmore__tips"></span>
-                    </div>-->
                 </div>
         </div>
         <div class="container containerHide weui-tab__bd-item">
